// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SIWESignInfo renders correctly for SIWE signature request 1`] = `
<div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-column mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <button
      aria-label="copy-button"
      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
      style="cursor: pointer; position: absolute; right: 32px; top: 2px;"
    >
      <span
        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/copy.svg');"
      />
    </button>
    <button
      aria-label="collapse-button"
      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
      data-testid="sectionCollapseButton"
      style="cursor: pointer; position: absolute; right: 8px;"
    >
      <span
        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/collapse.svg');"
      />
    </button>
    <div
      class="mm-box mm-box--padding-right-12 mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
        >
          Message
        </p>
      </div>
    </div>
    <div
      class="mm-box siwe-sign__message-rows mm-box--width-full"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        I accept the MetaMask Terms of Service: https://community.metamask.io/tos
      </p>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              URL
            </p>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            https://metamask.github.io
          </p>
        </div>
      </div>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Network
            </p>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            Ethereum Mainnet
          </p>
        </div>
      </div>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Account
            </p>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <div
              class="name name__clickable name__missing"
            >
              <span
                class="mm-box name__icon mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/question.svg');"
              />
              <p
                class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
              >
                0x935e7...05477
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Version
            </p>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            1
          </p>
        </div>
      </div>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Chain ID
            </p>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            1
          </p>
        </div>
      </div>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Nonce
            </p>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            32891757
          </p>
        </div>
      </div>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Issued
            </p>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            30 September 2021, 16:25
          </p>
        </div>
      </div>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Request ID
            </p>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            some_id
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SIWESignInfo renders correctly for SIWE signature request with resources 1`] = `
<div>
  <div
    class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-column mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <button
      aria-label="copy-button"
      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
      style="cursor: pointer; position: absolute; right: 32px; top: 2px;"
    >
      <span
        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/copy.svg');"
      />
    </button>
    <button
      aria-label="collapse-button"
      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
      data-testid="sectionCollapseButton"
      style="cursor: pointer; position: absolute; right: 8px;"
    >
      <span
        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/collapse.svg');"
      />
    </button>
    <div
      class="mm-box mm-box--padding-right-12 mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
        >
          Message
        </p>
      </div>
    </div>
    <div
      class="mm-box siwe-sign__message-rows mm-box--width-full"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        I accept the MetaMask Terms of Service: https://community.metamask.io/tos
      </p>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              URL
            </p>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            https://metamask.github.io
          </p>
        </div>
      </div>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Network
            </p>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            Ethereum Mainnet
          </p>
        </div>
      </div>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Account
            </p>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <div
              class="name name__clickable name__missing"
            >
              <span
                class="mm-box name__icon mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/question.svg');"
              />
              <p
                class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
              >
                0x935E7...05477
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Version
            </p>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            1
          </p>
        </div>
      </div>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Chain ID
            </p>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            1
          </p>
        </div>
      </div>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Nonce
            </p>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            32891757
          </p>
        </div>
      </div>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Issued
            </p>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            30 September 2021, 16:25
          </p>
        </div>
      </div>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Request ID
            </p>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            some_id
          </p>
        </div>
      </div>
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Resources
            </p>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            ipfs://Qme7ss3ARVgxv6rXqVPiikMJ8u2NLgmgszg13pYrDKEoiu
          </p>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            https://example.com/my-web2-claim.json
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
